# tinkoff_test

./: README.md  pyproject.toml  tinek_test.ipynb
