[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["n.tiunov <n-tiunov@tinkoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
category-encoders = "^2.6.2"
torch = "^2.0.1"
catboost = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
